kubernetes/umami/deployment-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: umami-app
  namespace: umami
  labels:
    app: umami-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: umami-app
  template:
    metadata:
      labels:
        app: umami-app
    spec:
      containers:
        - name: umami
          image: ghcr.io/umami-software/umami:latest
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /api/heartbeat
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 5
