kubernetes/umami/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: umami-app
  namespace: umami
spec:
  selector:
    app: umami-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
