kubernetes/umami/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: umami-db
  namespace: umami
spec:
  selector:
    app: umami-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
